Update Dahlia DSCP Model Final.ipynb

--- a/Dahlia/Dahlia DSCP Model Final.ipynb
+++ b/Dahlia/Dahlia DSCP Model Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "47061a7b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c0aa1c16",
    "metadata": {},
    "outputs": [],
@@ -38,48 +38,6 @@
     "df['date_of_feed'] = pd.to_datetime(df['date_of_feed'])\n",
     "df['browns_amount'] = df['browns_amount'] * 1000 \n",
     "df['greens_amount'] = df['greens_amount'] * 1000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cede25f",
-   "metadata": {},
-   "source": [
-    "### Reassign NPK Optimals "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f3b7ff01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean and split NPK values\n",
-    "df[['N', 'P', 'K']] = df['NPK Ratio'].str.split(':', expand=True).astype(float)\n",
-    "\n",
-    "# Define adjusted classification function with ±3 threshold flexibility\n",
-    "def classify_adjusted_npk(n, p, k):\n",
-    "    if n == 0 or p == 0 or k == 0:\n",
-    "        return 'Unknown'\n",
-    "    \n",
-    "    # Simple ratio normalization\n",
-    "    p_ratio = round(p / n, 1)\n",
-    "    k_ratio = round(k / n, 1)\n",
-    "\n",
-    "    # Adjusted range thresholds (±3 flexibility)\n",
-    "    if 1.4 <= p_ratio <= 2.6 and 1.4 <= k_ratio <= 2.6:\n",
-    "        return 'Optimal (Long Bean)'\n",
-    "    elif 0.9 <= p_ratio <= 2.1 and 0.9 <= k_ratio <= 2.1:\n",
-    "        return 'Balanced (Lady Finger)'\n",
-    "    elif 0.4 <= p_ratio <= 1.6 and 0.4 <= k_ratio <= 1.6:\n",
-    "        return 'Balanced (General)'\n",
-    "    elif 0.1 <= p_ratio <= 1.1 and 0.1 <= k_ratio <= 1.1:\n",
-    "        return 'High Nitrogen (Spinach Leaning)'\n",
-    "    else:\n",
-    "        return 'Unbalanced'\n",
-    "\n",
-    "df['NPK - Plant Readiness'] = df.apply(lambda row: classify_adjusted_npk(row['N'], row['P'], row['K']), axis=1)"
    ]
   },
   {
@@ -100,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cf016c84",
    "metadata": {},
    "outputs": [],
@@ -114,9 +72,9 @@
     "    \n",
     "    ranges = {\n",
     "        'Leafy Greens': (10, 15),\n",
-    "        'Fruit Veggies': (15, 20),\n",
+    "        'Fruit Veggies': (15, 25),\n",
     "        'Root Vegetables': (15, 25),\n",
-    "        'Herbs': (12, 20),\n",
+    "        'Herbs': (15, 20),\n",
     "        'Flowering Plants': (15, 25),\n",
     "        'Woody Plants': (20, 30)\n",
     "    }\n",
@@ -139,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "0ae87570",
    "metadata": {},
    "outputs": [],
@@ -153,7 +111,7 @@
     "    \"Fruit Veggies\": {\n",
     "        \"moisture\": 41.3, \n",
     "        \"cn_min\": 15,\n",
-    "        \"cn_max\": 20\n",
+    "        \"cn_max\": 25\n",
     "    },\n",
     "    \"Root Vegetables\": {\n",
     "        \"moisture\": 40.76,\n",
@@ -162,7 +120,7 @@
     "    },\n",
     "    \"Herbs\": {\n",
     "        \"moisture\": 48.28,  \n",
-    "        \"cn_min\": 12,\n",
+    "        \"cn_min\": 15,\n",
     "        \"cn_max\": 20\n",
     "    },\n",
     "    \"Flowering Plants\": {\n",
@@ -180,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "caec6093",
    "metadata": {},
    "outputs": [],
@@ -195,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "0cd94e19",
    "metadata": {},
    "outputs": [],
@@ -221,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "fc3c875e",
    "metadata": {},
    "outputs": [],
@@ -323,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "55d20448",
    "metadata": {},
    "outputs": [
@@ -332,20 +290,20 @@
      "output_type": "stream",
      "text": [
       "Choose crop type: Leafy Greens | Fruit Veggies | Root Vegetables | Herbs | Flowering Plants | Woody Plants\n",
-      "Enter your crop type: herbs\n",
+      "Enter your crop type: root vegetables\n",
       "Enter the amount of greens you have (in grams): 30\n",
       "\n",
       "Recommendation:\n",
       "Greens (g): 30.0\n",
       "Browns (g): 54.0\n",
-      "Water (g): 78.41\n",
-      "Target Crop: Herbs\n",
+      "Water (g): 57.8\n",
+      "Target Crop: Root Vegetables\n",
       "Resulting C:N Ratio: 16:1\n",
       "Days to Optimal: 8\n",
       "Based on Device: NP002\n",
       "Based on Feed Date: 2025-06-30\n",
       "Observed Optimal Date: 2025-07-08\n",
-      "Moisture Target %: 48.28\n"
+      "Moisture Target %: 40.76\n"
      ]
     }
    ],
@@ -370,6 +328,14 @@
     "    except ValueError as e:\n",
     "        print(f\"\\nError: {str(e)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c1a6ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
